gccida/c1/div_and_round_double
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/div_and_round_double/src/fold-const.c:1025:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/div_and_round_double/src/fold-const.c:1169:12: error: expected expression
*( _OWORD *)v85 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/div_and_round_double/src/fold-const.c:1169:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v85 = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/div_and_round_double/src/fold-const.c:1170:12: error: expected expression
*( _OWORD *)words = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/div_and_round_double/src/fold-const.c:1170:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)words = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/div_and_round_double/src/fold-const.c:1173:12: error: expected expression
*( _OWORD *)v78 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/div_and_round_double/src/fold-const.c:1173:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v78 = 0LL; 
   ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/div_and_round_double/src/obj/fold-const.o] Error 1
